<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mis Lugares</string>
    <string name="action_settings">Settings</string>
    <string name="lblLugares">Mis Lugares</string>
    <string name="btnLugares1">Mostrar Lugares</string>
    <string name="btnLugares2">Preferencias</string>
    <string name="btnLugares3">Acerca de</string>
    <string name="btnLugares4">Salir</string>
    <string name="lblNombre">Nombre:</string>
    <string name="hntNombre">algo que identifique el lugar</string>
    <string name="lblTipo">Tipo</string>
    <string name="lblDireccion">Dirección:</string>
    <string name="hntDireccion">dirección del lugar</string>
    <string name="lblTelefono">Teléfono:</string>
    <string name="hntTelefono">telefono para contactar</string>
    <string name="lblUrl">Url:</string>
    <string name="hntUrl">página web</string>
    <string name="lblComentario">Comentario</string>
    <string name="hntComentario">introduce tus notas</string>
    <string name="menu_mapa">Mapa</string>

	<!-- Strings del layout vista_lugar -->
    <string name="txtTituloVL">Escuela Politécnica Superior de Gandía</string>
    <string name="q"></string>
    <string name="w"></string>
    <string name="e"></string>
    <string name="r"></string>
    <string name="t"></string>
    <string name="y"></string>
    <string name="u"></string>
    <string name="i"></string>
    <string name="o"></string>
    <string name="p"></string>
    <string name="a"></string>
    <string name="s"></string>
    <string name="d"></string>
    <string name="f"></string>

    <!-- Strings de muenu_vista_lugar -->
    <string name="accion_compartir">Compartir</string>
    <string name="accion_llegar">Llegar</string>
</resources>
