<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/lblLugares"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/lblLugares"
        android:textSize="30sp" />

    <Button
        android:id="@+id/btnLugares1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnLugares1" />

    <Button
        android:id="@+id/btnLugares2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnLugares2" />

    <Button
        android:id="@+id/btnLugares3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnLugares3" />

    <Button
        android:id="@+id/btnLugares4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnLugares4" />

</LinearLayout>
